gd_internal_course_tasks/task_ingress/nginx/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginxservice
spec:
  type: ClusterIP
  selector:
    app: nginxdeployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
