gd_internal_course_tasks/task_ingress/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-nginxservice-a
spec:
  ingressClassName: nginx-servicea
  rules:
  - host: atrofymchuk.pp.ua
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend: 
          service: 
            name: nginxservice
            port: 
             number: 8080
